app/code-server/service.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  name: codeserver
  namespace: #@ data.values.codeServer.namespace
spec:
  selector: #@ data.values.codeServer.matchLabels
  ports:
  - name: web
    port: 80
    targetPort: 80
