app/code-server/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: codeserver
  namespace: #@ data.values.codeServer.namespace
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}`)".format(data.values.codeServer.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: codeserver
      port: 80
      strategy: RoundRobin
